k8s/churn-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churn-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: churn-service
  template:
    metadata:
      labels:
        app: churn-service
    spec:
      serviceAccountName: churn-service
      containers:
        - name: churn-service
          image: 239302213769.dkr.ecr.us-east-1.amazonaws.com/churn-prediction-service:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: churn-service
  namespace: default
spec:
  selector:
    app: churn-service
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
